# dia-legacy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dia.c  dia.h  dia.l  dia.y  dia_calculation.c  dia_calculation.h  dia_node.h  dia_vector.c  dia_vector.h  diac  main.c  meson.build
example/: comment.dia  factorial.dia  fibonacci.dia  hello2.dia  hello3.dia
example/calculation/: minus.dia  plus.dia
example/conditions/: if_else.dia
example/function/: add1.dia  basic_function.dia
example/hello/: dia_logo.dia  hello.dia
example/io/: echo.dia
example/loop/: infinite.dia
